v2.6.0.0 - Added options to save H264 movie files in YUV420 or YUV444.
	 - Added options to save audio in MP3 format, but there's still some
	   "pops" in the output of most files and sync issues.
	 - Fixed searching to a point with audio not being found.  Now
	   searching is more solid.
v2.5.9.1 - Switching images no longer auto refits them in view when autorefit
	   is on.  It keeps zoom level and offset so as to compare two images 
	   at closeup. Only when window is resized or the image is loaded,
	   autofit takes over.
	 - Made Single Instance of viewer an alert when another instance is
	   running.  The alert also tells user where to remove the lock file.
	 - ffmpeg has a new -gamma flag for EXRs to support creating movies
	   at other gamma values (2.2).
	 - Bug fixed EDL when more than 2 reels were created and drag happened
	   to an invisible track.
	 - Bug fixed EDL when one image was loaded and switched tracks would no
	   longer play it back.
	 - Bug fixed CTL creation when path is the same but images (primaries)
	   are not.

v2.5.9.0 - Added multipart EXR support for multiple parts (new pass system) 
	   and stereo (anaglyph, horizontal and crosseyed).  
	   Support is given for deepscanline and scanline images.
	   Note that there is no support for deep compositing yet.
	 - Bug fixed pixel aspect ratio in EXR images.
	 - Bug fixed normalize in EXR images.
	 - Bug fixed saving of PNGs (among others) with gamma different 
	   than 1.  Previously that would create a file with banding.
	 - Display Window of EXRs is not yet supported.  All images loaded
	   are centered upon display.

v2.5.8.2 - Drag and Drop now supports dragging directories to load all that
	   is found inside them.
	 - Drag and Drop now supports dragging single files like mp3s.
	 - Drag and Drop now supports files with spaces and brackets (Linux).
	 - Color Info window now displays the gamma/gain'ed image value
	   instead of just the original values.