@@ -3,6 +3,8 @@ v2.6.0.0 - Added options to save H264 movie files in YUV420 or YUV444.
 	   "pops" in the output of most files and sync issues.
 	 - Fixed searching to a point with audio not being found.  Now
 	   searching is more solid.
+	 - Made audio saving a non-default option due to the bugs that still
+	   plague it.
 v2.5.9.1 - Switching images no longer auto refits them in view when autorefit
 	   is on.  It keeps zoom level and offset so as to compare two images 
 	   at closeup. Only when window is resized or the image is loaded,
